configuração inicial banco de dados