@@ -60,11 +60,14 @@ public class Principal {
     }
 
     private void listarSeriesBuscadas() {
-      List<Serie> series = new ArrayList<>();
-      dadosSeries.stream()
+//      List<Serie> series = new ArrayList<>();
+//      dadosSeries.stream()
+//        .map(Serie::new)
+//        .toList()
+//        .forEach(s -> series.add(s));
+      List<Serie> series = new ArrayList<>(dadosSeries.stream()
         .map(Serie::new)
-        .collect(Collectors.toList())
-        .forEach(s -> series.add(s));
+        .toList());
 
       System.out.println("Lista das séries buscadas:" + "\n");
 
@@ -74,11 +77,10 @@ public class Principal {
     }
 
     private DadosSerie getDadosSerie() {
-        System.out.println("Digite o nome da série para busca");
-        var nomeSerie = leitura.nextLine();
-        var json = consumo.obterDados(ENDERECO + nomeSerie.replace(" ", "+") + API_KEY);
-        DadosSerie dados = conversor.obterDados(json, DadosSerie.class);
-        return dados;
+      System.out.println("Digite o nome da série para busca");
+      var nomeSerie = leitura.nextLine();
+      var json = consumo.obterDados(ENDERECO + nomeSerie.replace(" ", "+") + API_KEY);
+      return conversor.obterDados(json, DadosSerie.class);
     }
 
     private void buscarEpisodioPorSerie(){
@@ -86,9 +88,9 @@ public class Principal {
         List<DadosTemporada> temporadas = new ArrayList<>();
 
         for (int i = 1; i <= dadosSerie.totalTemporadas(); i++) {
-            var json = consumo.obterDados(ENDERECO + dadosSerie.titulo().replace(" ", "+") + "&season=" + i + API_KEY);
-            DadosTemporada dadosTemporada = conversor.obterDados(json, DadosTemporada.class);
-            temporadas.add(dadosTemporada);
+          var json = consumo.obterDados(ENDERECO + dadosSerie.titulo().replace(" ", "+") + "&season=" + i + API_KEY);
+          DadosTemporada dadosTemporada = conversor.obterDados(json, DadosTemporada.class);
+          temporadas.add(dadosTemporada);
         }
         temporadas.forEach(System.out::println);
     }
